--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/react": "18.2.6",
 		"@types/react-dom": "18.2.4",
 		"autoprefixer": "10.4.14",
+		"framer-motion": "^10.12.8",
 		"next": "13.4.1",
 		"next-auth": "^4.22.1",
 		"postcss": "8.4.23",
