--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
+		"react-timeago": "^7.1.0",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.0.4"
 	},
 	"devDependencies": {
+		"@types/react-timeago": "^4.1.3",
 		"prisma": "^4.13.0"
 	}
 }
