--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-dom": "18.2.0",
 		"react-icons": "^4.8.0",
 		"react-timeago": "^7.1.0",
+		"tailwind-scrollbar-hide": "^1.1.7",
 		"tailwindcss": "3.3.2",
 		"typescript": "5.0.4"
 	},
